tests/fails/f45.t
require("fail")

terra foo()
  break
end
foo()
